@@ -8,8 +8,6 @@ B<oaradmin> resources OPTIONS
 
 B<oaradmin> rules OPTIONS
 
-B<oaradmin> conf OPTIONS
-
 B<oaradmin> version
 
 =head1 DESCRIPTION
@@ -19,8 +17,6 @@ This command is used to manage OAR configuration.
 The command B<oaradmin resources> manages resources in OAR database : add, update and delete many resources in a single command line.
 
 The command B<oaradmin rules> manages admission rules : list, add, edit/update, delete, export, enable or disable one or several admission rules. A versioning feature, using Subversion, allows one to keep all admission rules changes.
-
-The command B<oaradmin conf> is useful for modify OAR conf files, register changes in a Subversion repository and revert to a conf file at a particular revision if needed.
 
 The command B<oaradmin version> print the version of OAR. 
 
@@ -173,31 +169,6 @@ Show all changes made on the admission rule rule_id. Output is displayed in unif
 
 Revert to the admission rule rule_id as it existed in #rev revision. Ex :
   oaradmin rules -R 10 3
-
-=item B<-h, --help> 
-
-Print help message.
-
-=back
-
-=head2 Options for conf subcommand
-
-=over
-
-=item B<-e, --edit> conf_file
-
-Edit the file conf_file using a text editor. $EDITOR variable environment is used to launch the preferred text editor. If $EDITOR is not defined, vi is used. If the versioning feature is enabled, after editing the file, changes are registered in a Subversion repository. Versioning feature can be activated with the parameter OARADMIN_VERSIONING in the OAR conf file. The repository is created when a change is made in the file. Ex :
-  oaradmin conf -e %%OARCONFDIR%%/oar.conf
-
-=item B<-H, --history> conf_file [-n number]
-
-Show all changes made on the file conf_file. Output is displayed in unified diff format. With -n number option, only the #number latest changes are displayed. Ex :
-  oaradmin conf -H oar.conf
-
-=item B<-R, --revert> conf_file rev
-
-Revert to the file conf_file as it existed in #rev revision. Ex :
-  oaradmin conf -R %%OARCONFDIR%%/oar.conf 3
 
 =item B<-h, --help> 
 
